<resources>
    <string name="todo">to do nothing</string>
    <string name="app_name">词星骑士</string>
    <string name="aPictureADay">每日一图</string>
    <string name="icon_tips">提示作用的图标</string>
    <string name="welcome_introduction">
        \t\t\t为更好地提升用户的使用体验，本软件会根据您使用的具体需要，收集必要的用户信息，如设备信息、存储等必要权限。\n
        \t\t\t保护用户隐私是软件最基本的原则，本软件承诺不会泄露你的个人信息。衷心希望此款软件，可以成为您最好的学习伙伴。
    </string>
    <string name="welcome_introduction_agree">同 意</string>
    <string name="welcome_introduction_disagree">不同意</string>
    <string name="month">Mar</string>
    <string name="day">23</string>
    <string name="pennant">显示日期</string>
    <string name="welcome">Welcome back!\nHonorable word knight</string>
    <string name="motto">War is a tragic life, and life is a slow-paced war</string>
    <string name="english_dictionary">English dict</string>
    <string name="daily_word_number">daily word number</string>
    <string name="day_tips">每日小贴士</string>
    <string name="word">单词学习页</string>
    <string name="review">复习拓展页</string>
    <string name="me">用户设置页</string>
    <string name="start_learning">Start here!</string>
    <string name="some_little_functions">Some little functions.</string>
    <string name="refresh">refresh daily words.</string>
    <string name="octopath_travellers">Octopath Travellers</string>
    <string name="favorites_words">单词夹</string>
    <string name="the_icon_of_favorites_words">the icon of favorites words</string>
    <string name="the_delete">删除按钮</string>
    <string name="the_button_continue">继 续</string>
    <string name="into_folder">放入收藏夹</string>
    <string name="title_word_folder">单词夹</string>
    <string name="the_back_icon">返回图标</string>
    <string name="the_add_icon">添加图标</string>
    <string name="the_icon_memo">备注图标</string>
    <string name="the_icon_volume">发音图标</string>
    <string name="the_icon_custom">自定义单词图片的图标</string>
    <string name="abandon">abandon</string>
    <string name="abandon_pronounce">/əˈbændən/</string>
    <string name="UK_pronounce">英式发音</string>
    <string name="US_pronounce">美式发音</string>
    <string name="abandon_meaning">v. 抛弃，遗弃；（因危险）离开，舍弃；中止，不再有；放弃（信念、信仰或看法）；陷入，沉湎于（某种情感）\nn. 放任，放纵</string>
    <string name="memory_function">巧记</string>
    <string name="memory_function_explanation">a 前缀+ban 禁止+don 给予 = 禁止给出去 = 放弃</string>
    <string name="example_sentence">例句</string>
    <string name="english_interpretation">英文释义</string>
    <string name="phrase">相关词组</string>
    <string name="remark">备注</string>
    <string name="search_hint">搜索 | 查询单词</string>
    <string name="icon_search">搜索图标</string>
    <string name="cancel">取消</string>
    <string name="icon_cancel">取消图标</string>
    <string name="this_year">2023</string>
    <string name="icon_share">分享图标</string>
    <string name="icon_sound">播放图标</string>
    <string name="login">『词星骑士』</string>
    <string name="login_saying">开拓视野，冲破艰险，洞悉所有，\n贴近生活，寻找真爱，感受彼此。\n这就是人生的目的。</string>
    <string name="login_saying2">『To see the world,\nthings dangerous to come to,\nto see behind walls,\nto draw closer,\nto find each other and to feel.\nThat is the purpose of life.』</string>
    <string name="login_saying3">笑挥枪剑，战天下英雄好汉\n怒掣戒刀，砍世上逆子谗臣\n</string>
    <string name="log_in">本地登录</string>
    <string name="qq_log_in">QQ登录</string>
    <string name="user_portrait">用户头像</string>
    <string name="chooseBook">选择词书</string>
    <string name="data_recovery">云端数据恢复图标</string>
    <string name="word_book_display">词书图片展示</string>
    <string name="data_source">数据来源</string>
    <string name="word_book_name">词书名称</string>
    <string name="word_number">单词数量</string>
    <string name="_323">323</string>
    <string name="icon_details">省略详情</string>
    <string name="daily_plan">每日新学单词任务</string>
    <string name="input_numbers">输入你的每日任务单词数</string>
    <string name="s">个</string>
    <string name="current_book">当前词书：</string>
    <string name="words_number">总词汇量：</string>
    <string name="illustration">illustration</string>
    <string name="Link_advice">勇者林克的小贴士:</string>
    <string name="advice_1">1. 若重置词书及计划，学习记录也会一并重置。</string>
    <string name="advice_2">2. 每日的单词学习数至少为5个，最大不超过词书总数，能力强的话可以酌情增多。（p.s.一般推荐5~15个）</string>
    <string name="advice_3">3. 系统会将第一天学的单词放在接下来的三天里进行趁热打铁复习，所以同2，每日计划量不宜太多。</string>
    <string name="go">就这样决定了!</string>
    <string name="administrator">骑士小光</string>
    <string name="days_of_persistence">奋战天数</string>
    <string name="number_7">7</string>
    <string name="learned_words">已学单词</string>
    <string name="number_20">20</string>
    <string name="number_100">100</string>
    <string name="coins">赚取金币</string>
    <string name="access_to_the_papers_is_restricted_to_senior_management">Access to the papers is restricted to senior management.</string>
    <string name="access_to_the_papers_is_restricted_to_senior_management_cn">只有高级管理层才有权查阅这些文件。</string>
    <string name="access_control">access control</string>
    <string name="access_control_cn">访问控制</string>
    <string name="rel_word">同根词</string>
    <string name="syno">同义近义</string>
    <string name="noun">n.</string>
    <string name="noun_example">accessibility\t易接近；可亲；可以得到\naccession\t增加；就职；到达</string>
    <string name="synonym_pos_and_tran">vt. 使用；[计]存取；接近</string>
    <string name="synonym_example">make use of\nfashion\nemploy\nborder\nexercise</string>
    <string name="word_name">单词名</string>
    <string name="no_results">暂无搜寻结果</string>
    <string name="custom_option">自定义选项</string>
    <string name="custom_translation">编辑词义</string>
    <string name="custom_sentence">编辑例句</string>
    <string name="custom_phrase">编辑词组</string>
    <string name="custom_memo">编辑备注</string>
    <string name="custom_picture">编辑联想记忆图片\n(p.s.占内存，非必要不推荐)</string>
    <string name="close">Close</string>
    <string name="undo">撤销</string>
    <string name="icon_document">单词夹里的文件图标</string>
    <string name="item_favorites_text_name">单词夹名</string>
    <string name="ci">词</string>
    <string name="text_view_favorites_title">新建单词夹</string>
    <string name="edit_text_favorites_title">名称(必填)</string>
    <string name="edit_text_favorites_memo">备注(选填)</string>
    <string name="save">Save</string>
    <string name="loading">Loading…</string>
    <string name="favorites_name">单词列表</string>
    <string name="scientists">scientists</string>
    <string name="edit_here">Edit here</string>
    <string name="need_to_learn">需新学</string>
    <string name="need_to_review">需复习</string>
    <string name="eng">英</string>
    <string name="abandon_tip">stop maintaining or insisting on; of ideas or claims</string>
    <string name="have_known">标记为熟知词</string>
    <string name="know">认识</string>
    <string name="uncertainty">不确定</string>
    <string name="do_not_know">不认识</string>
    <string name="check_the_answer">看 答 案</string>
    <string name="coins_add_10">金币 +10</string>
    <string name="mission_complete">今日任务已完成！</string>
    <string name="today_learned">今日已学</string>
    <string name="how_many_words">个单词</string>
    <string name="have_insisted">已坚持</string>
    <string name="how_many_days">天</string>
    <string name="ok">确 定</string>
    <string name="feelings">骑士心得</string>
    <string name="this_is_review">这里是复习页面</string>
    <string name="all_word_list">我的词汇</string>
    <string name="learning_statistics">学习数据</string>
    <string name="learning_history">每日签到</string>
    <string name="book_plan">词书计划</string>
    <string name="bye_bye">Here\'s to my lost four years of youth</string>
    <string name="log_out">Log out</string>
    <string name="about_info">关于软件</string>
    <string name="SDK_policy">第三方SDK清单</string>
    <string name="reminder_setting">提醒设置</string>
    <string name="aux_fun">辅助功能</string>
    <string name="my_star">生词本</string>
    <string name="trash_can">熟知词</string>
    <string name="words_in_book">全部词汇</string>
    <string name="modify_data">编辑数据</string>
    <string name="input_cn">汉语释义</string>
    <string name="input_en">英语释义</string>
    <string name="memo">自定义备注</string>
    <string name="input_phrase">英文词组</string>
    <string name="input_sentence">英文例句</string>
    <string name="_2023_3_23">2023年3月23日</string>
    <string name="_7_days_ago">7天前</string>
    <string name="you_are_absent">这天小骑士好像没有签到哦…</string>
    <string name="learn_word_num">战获单词</string>
    <string name="I_am_mad">我要被烦死了！</string>
    <string name="app_version">发行版本:  1.0.1</string>
    <string name="text_about_description">19级计科毕设作品</string>
    <string name="text_about_author_saying">据说app的名称是致敬了作者小时候最爱看的一部动画片，也算是缅怀童年了</string>
    <string name="text_about_author">Made by Jet Cryan</string>
    <string name="not_found">该分类暂时没有单词哦</string>
    <string name="_0">0</string>
    <string name="daily_words_number">近七日学习量统计</string>
    <string name="this_day_learned">今日学习</string>
    <string name="this_day_reviewed">今日复习</string>
    <string name="learning_duration_statistics">近七日学习时长统计</string>
    <string name="minutes">分钟</string>
    <string name="proportion">单词学习占比情况</string>
    <string name="not_have_learned">尚未学习</string>
    <string name="shallow_review">浅度掌握</string>
    <string name="deep_review">深度掌握</string>
    <string name="fully_master">完全掌握</string>
    <string name="show_learning_plan_data">词星骑士修行手册</string>
    <string name="custom_your_plan">定义你的学习计划</string>
    <string name="predict">预计于2023年5月25日初学完所有单词</string>
    <string name="adjust_the_study_plan">调整学习计划</string>
    <string name="review_and_extension_column">额外试炼专栏手册</string>
    <string name="the_range_limit">不要低于5个哦</string>
    <string name="extra_area">额外试炼与能力强化</string>
    <string name="come_and_do_extra_task">没学够? 来试试副本任务吧!</string>
    <string name="game_boy">小试牛刀</string>
    <string name="chrono_trigger">超时空之钥</string>
    <string name="save_Marl">拯救玛鲁</string>
    <string name="quick_learning">听力速记</string>
    <string name="hearing_improvement">提升听力</string>
    <string name="words_match">单词消消乐</string>
    <string name="enrich">拓展记忆</string>
    <string name="take_pictures">拍照取词</string>
    <string name="discovery_documentation">发现与记录</string>
    <string name="start">开 始</string>
    <string name="_3_23">3 / 23</string>
    <string name="summary">结束啦，快来看看副本有些什么收获吧</string>
    <string name="back_to_home">返回主界面</string>
    <string name="help">帮 助</string>
    <string name="skip">跳过</string>
    <string name="save_marl">Click the right answer to save Marl!</string>
    <string name="question_word">当前单词 ▶▶</string>
    <string name="timer">◀◀ 回合剩余: </string>
    <string name="game_over">GAME OVER</string>
    <string name="play_again">我要再战</string>
    <string name="exit">结算单词</string>
    <string name="quick_number">听力速记数量设置</string>
    <string name="xiaoxiaole_number">消消乐数量设置</string>
    <string name="save_data">保存当前数据</string>
    <string name="notification_word">通知横幅背单词功能</string>
    <string name="need_notification">需允许应用发送通知</string>
    <string name="range">选词范围</string>
    <string name="range_tip">点击选择单词所属类别</string>
    <string name="tip_sample">乱序大纲</string>
    <string name="waiting_for_update">更多功能正在开发中，敬请期待</string>
    <string name="switch_notification_tip1">•关闭应用会导致通知横幅也消失</string>
    <string name="switch_notification_tip2">•辅助功能不计入学习时长</string>
    <string name="switch_notification_tip3">•享受小组件带来的乐趣</string>
    <string name="switch_advice">注意事项</string>
    <string name="alarm">闹钟提醒功能</string>
    <string name="alarm_tip">不要忘了每天的修行哦</string>
    <string name="time_setting">时间设置</string>
    <string name="time_setting_tip">点击以定义你的闹钟</string>
    <string name="am_9_00">AM 9:00</string>
    <string name="switch_alarm_tip1">•该功能开启后，每天都会进行通知提醒，注意查看手机通知栏消息。</string>
    <string name="switch_alarm_tip2">•若自定义的时间小于当前时间，系统默认将闹钟设置到翌日，否则会当日进行提醒</string>
    <string name="switch_alarm_tip3">•与任何通知一样，若强行停用app，将无法接收通知服务</string>
</resources>