<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="12dp"
    android:paddingEnd="20dp"
    android:paddingBottom="13dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_search_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_search_pronounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/US_pronounce"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_search_means"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/english_interpretation"
        android:textSize="13sp" />

</LinearLayout>